--- a/knowledge-base/quality-checks/time-score.mdx
+++ b/knowledge-base/quality-checks/time-score.mdx
@@ -1,34 +1,34 @@
 ---
 title: "Time Score"
-description: "Discover how the Time Score is calculated."
+description: "Understand how the Time Score is calculated and how it helps assess respondent engagement."
 icon: "stopwatch"
 iconType: "regular"
 ---
 
 ## What is the Time Score?
 
-ReDem enables you to assess respondents based on the time they spend on any part of a questionnaire, such as total duration, time per section, or time per question. This feature flags responses that deviate from expected time norms, helping you identify and address inconsistencies in respondent engagement.
+The Time Score allows you to evaluate how much time respondents spend on different parts of the questionnaire—such as the total interview duration, time per section, or time per question. It flags responses that significantly deviate from expected time patterns, helping you detect rushed or overly slow behavior.
 
-Whether a participant rushes through or takes longer than anticipated, the Time Score highlights potential issues, enhancing the overall quality of your survey data.
+By identifying these anomalies, the Time Score helps improve the overall reliability of your survey data.
 
-## Calculation of Individual Time Scores for Each Time Duration
+## How Individual Time Scores Are Calculated
 
-We assess questionnaire response times by comparing a respondent's duration to the median time of other participants.
+Each time-based score is calculated by comparing a respondent’s duration to the median time of other participants.
 
-Time-Scores are calculated as follows:
+Scoring rules:
 
 * **Less than 10% of the median**: Score = `0`
 
 * **Between 10% and 50% of the median**: Score = `0-50`
 
-* **Between 50% to 80%  and between 400% to 1000% of the median**: Score = `50-80`
+* **Between 50%–80% or 400%–1000% of the median**: Score = `50-80`
 
 * **Between 80% and 400% of the median**: Score = `80-100`
 
-<Note> **Important:** Time Scores are calculated only when the sample size reaches at least 30, ensuring the median respondent duration is statistically meaningful.</Note>
+<Note> **Important:** Scores are only calculated when there are at least 30 respondents, ensuring the median is statistically meaningful.</Note>
 
-## Calculation of the Total Time Score for a Respondent
+## Total Time Score Calculation per Respondent
 
-Time Scores are calculated individually for each specific part of the questionnaire and then combined into an overall score.
+Time Scores are calculated for each available time metric (e.g., LOI, time per page), then combined into an overall score for the respondent.
 
-To maximize the score's accuracy and relevance, we recommend including not only the total interview duration (LOI) but also detailed timing data for as many individual sections of the interview as possible. This approach provides a clearer and more precise understanding of respondent engagement.
+To ensure accurate scoring, we recommend capturing the time spent per page. This allows for a more detailed and precise assessment of respondent engagement.
