--- a/api-reference/others/change-log.mdx
+++ b/api-reference/others/change-log.mdx
@@ -85,7 +85,7 @@ iconType: "regular"
   When a request fails due to invalid input or other errors, the all API returns a **400 Bad Request** status code. The response includes a descriptive `message` explaining the issue and an `error` object containing additional details to aid in diagnosing and resolving the problem.
 </Update>
 
-<Update label="2025-02-20" description="V3 (Beta)">
+<Update label="2025-02-20" description="V1">
   ## **ReDem 3.0 API - Initial Release**
 
   This initial release of the **ReDem API** empowers you to seamlessly integrate ReDem into your workflows and applications. As the backbone of our platform, the API provides direct access to all ReDem features, from real-time data insights to smooth integration with existing systems.
