--- a/knowledge-base/features/cleaning-and-review.mdx
+++ b/knowledge-base/features/cleaning-and-review.mdx
@@ -1,78 +1,63 @@
 ---
 title: "Data Cleaning"
-description: "Discover how data cleaning works in ReDem"
+description: "Discover how ReDem automates and simplifies data cleaning."
 icon: "broom-wide"
 iconType: "regular"
 ---
 
 ## Why data cleaning matters?
 
-Data cleaning is a critical step in ensuring the quality of your analysis. It not only identifies inconsistencies and irrelevant data but also plays a vital role in detecting low-quality respondents and artificially generated responses.
+Data cleaning helps ensure your results are based on valid, high-quality responses. ReDem automates this process to help you detect and exclude unreliable data.
 
 ReDem’s data cleaning feature automates and streamlines this process, providing a standardized and transparent approach grounded in ReDem’s comprehensive evaluation framework.
 
-## How does cleaning work?
+## How Cleaning Works
 
-Every respondent evaluated by ReDem undergoes a series of rigorous quality checks. These checks assign a score and categorize each response, forming the foundation of ReDem’s data cleaning process.
+Every respondent evaluated by ReDem goes through a series of quality checks. These checks produce scores and classification labels, which form the basis of the cleaning logic.
 
-ReDem offers two primary methods for cleaning your data::
+ReDem offers two cleaning approaches:
 
-### ReDem Recommended Cleaning Settings
+### 1. ReDem Recommended Cleaning Settings
 
-Built on ReDem’s expertise, our default cleaning settings effectively address the most common data quality issues.
+Our default settings apply best-practice thresholds to the following metrics:
 
-**Overview of Recommended Settings:**
-Predefined thresholds for R-Score, OES (including Open-Ended Response Categories), CHS, GQS, and TS are applied as recommend settings. An interview is flagged for exclusion if **any** of the following criteria are met:
 
 - **ReDem Score (R-Score)**: Respondents with an R-Score below 60 are excluded.
 - **Open-Ended Score (OES) & Response Categories:**
   Respondents with an OES below 40 are excluded if they provide at least two open-ended responses.
 
-  Respondents flagged in at least two open-ended responses for wrong language, bad language, fake answer/copy paste, nonsense or wrong topic are excluded.
+  Respondents flagged in at least two open-ended responses for wrong language, bad language, AI generated Answer, nonsense or wrong topic are excluded.
 - **Coherence Score (CHS)**: Respondents with a CHS below 30 are excluded.
 - **Grid-Question Score (GQS)**: Respondents with a GQS below 20 and at least two valid grid-question responses are excluded.
 - **Time Score (TS)**: Respondents with a TS below 20 are excluded.
 - **Behavioral Analytics Score (BAS)**: Respondents with a BAS below 20 and at least two valid BAS data points are excluded.
 
-### Using Custom Cleaning Settings
+### 2. Custom Cleaning Settings
 
-To customize the cleaning process, you can define specific thresholds for each quality check, creating your own custom cleaning settings. This approach allows you to tailor the criteria to your unique requirements, ensuring more precise and relevant results.
+You can define your own thresholds for each quality metric. This enables fine-tuned control over what qualifies as low-quality data based on your specific needs.
 
-You can customize the following key quality checks by setting thresholds that determine when respondents should be flagged or excluded:
+Customizable elements include:
 
-- **ReDem Score**: 
+- **ReDem Score (R-Score):** Threshold
+- **Open-Ended Score (OES):** Threshold + min. number of open-ended responses + category-based exclusion logic
+  - **Open-Ended Response Categories:**
+    - **Generic Answer:**
+    - **Bad Language:**
+    - **No Information:**
+    - **Duplicate Respondent:**
+    - **Duplicate Answer:**
+    - **Nonsense:**
+    - **Wrong Language:**
+    - **Wrong Topic:**
+    - **AI Generated Answer:**
+- **Time Score (TS):** Threshold + min. number of time data points
+- **Grid-Question Score (GQS):** Threshold + min. valid grid questions
+- **Coherence Score (CHS):** Threshold + min. number of coherence data points
+- **Behavioral Analytics Score (BAS):** Threshold + min. valid BAS data points + category-based exclusion logic
+  - **BAS Categories:**
+    - **Unnatural Typing:**
+    - **Copy and Paste:**
 
-  
-  Set a threshold for the overall ReDem Score to filter out low-quality responses.
-- **Open-Ended Score (OES)**: 
-
-  
-  Define a threshold for the overall Open-Ended Score and set a minimum number of data points to filter out low-quality responses.
-- **Time Score (TS)**: 
-
-  
-  Set a threshold for the Time Score and number of data points to filter out low-quality responses
-- **Grid-Question Score (GQS)**:
-
-  
-  Define a threshold for the Grid-Question Score and set a minimum number of data points to filter out low-quality responses.
-- **Coherence Score (CHS)**:
-
-  
-  Set a threshold for the Coherence Score and set a minimum number of data points to filter out low-quality responses.
-- **Open-Ended Response Categories**:
-
-  
-  Respondents are flagged for exclusion if their open-ended responses meet specified criteria. Each category can require a minimum number of flagged data points for exclusion.
-  - **Generic Answer**
-  - **Bad Language**
-  - **No Information**
-  - **Duplicate Respondent**
-  - **Duplicate Answer**
-  - **Nonsense**
-  - **Wrong Language**
-  - **Wrong Topic**
-  - **AI Generated Answer**
 
 Here’s an example of a cleaning settings object that can be used to customize the cleaning process via the API:
 
@@ -102,26 +87,28 @@ Here’s an example of a cleaning settings object that can be used to customize 
   }
 ```
 
-## What is the outcome of the cleaning process?
+## What Is the Outcome of the Cleaning Process?
 
-The cleaning process classifies each response as either **Included** or **Excluded**, with clear reasons provided for exclusions. This ensures transparency and highlights areas that may require further attention or adjustments.
+Each respondent is classified as either:
+- **Included**
+- **Excluded**
 
-**Reasons for Exclusion** (only one needs to be true):
+Reasons for exclusion are clearly documented and based on whether any of the active criteria are triggered. Only one exclusion condition needs to be met for a respondent to be removed.
 
-- **ReDem Score Threshold**: Respondent’s ReDem Score is below the default (60) or a custom threshold.
-- **Open-Ended Score Threshold**: Respondent’s OES is below the default (40) or a custom threshold.
-- **Open Ended Category**: Respondet is having above define category threshold.
-- **Time Score Threshold**: Respondent’s TS is below the default (20) or a custom threshold.
-- **Grid-Question Score Threshold**: Respondent’s GQS is below the default (20) or a custom threshold.
-- **Coherence Score Threshold**: Respondent’s CHS is below the default (30) or a custom threshold.
-- **Behavioral Analytics Score Threshold**: Respondent’s BAS is below a custom threshold.
-- **Behavioral Analytics Category**: Respondet is having above define category threshold.
+- ReDem Score below threshold
+- Open-Ended Score below threshold
+- Open-Ended categories exceed allowed count
+- Time Score below threshold
+- Grid-Question Score below threshold
+- Coherence Score below threshold
+- Behavioral Analytics Score below threshold
+- BAS categories (e.g. Copy-Paste, Unnatural Typing) exceed allowed count
 
-This structured reasoning provides clear insights into exclusions, empowering users to refine their criteria based on the analysis.
+This transparent system ensures your data cleaning is auditable, adjustable, and aligned with your quality requirements.
 
-## Example of How the Cleaning Process Works
+## Example Case: Cleaning in Practice
 
-As an example, let's consider the cleaning settings applied to a specific respondent:
+Here’s a sample configuration and its impact on a respondent:
 
 ```javascript
   "redemScore": 60,
@@ -143,51 +130,8 @@ As an example, let's consider the cleaning settings applied to a specific respon
   }
 ```
 
-To better understand how cleaning settings are applied, let's consider different cases of respondent data and determine whether they should be excluded and what should be the reason for exclusion.
-
-<AccordionGroup>
-  <Accordion title="Respondent with Low ReDem Score and Low OES Score">
-    **Input:** 
-
-    
-    The respondent has a **ReDem Score of 50** and an **OES Score of 60**. They have provided **4 valid answers for OES data points**, **`3 of which are categorized as GENERIC_ANSWER`**.
-
-    **Output:** 
-
-    
-    The respondent is **excluded** because their **ReDem Score falls below the threshold**. Additionally, their **OES Score is below the defined threshold**, and they have provided **more than 2 valid answers for OES data points**, with **`3 categorized as GENERIC_ANSWER`**, exceeding the threshold set in the cleaning settings.
-  </Accordion>
-  <Accordion title="Respondent with Low OES Score">
-    **Input:** 
-
-    
-    The respondent has a **ReDem Score of 70** and an **OES Score of 30**. They have provided **2 valid answers for OES data points**, with **`1 categorized as a GENERIC_ANSWER`**.
-
-    **Output:** 
-
-    
-    The respondent is **excluded** because their **Open-Ended Score is below the threshold** and they have provided **2 valid answers for OES data points**.
-  </Accordion>
-  <Accordion title="Respondent with more `GENERIC_ANSWERS` than the threshold">
-    **Input:** 
-
-    
-    The respondent has a **ReDem Score of 70** and an **OES Score of 50**. They have provided **4 valid answers for OES data points**, with **`3 categorized as GENERIC_ANSWER`**.
-
-    **Output:** 
-
-    
-    The respondent is **excluded** despite their **ReDem Score and Open-Ended Score being above the threshold**, because **`more than 2 of their answers are categorized as GENERIC_ANSWER`**, exceeding the threshold defined in the cleaning settings.
-  </Accordion>
-  <Accordion title="Respondent who should not be excluded">
-    **Input:** 
-
-    
-    The respondent has a **ReDem Score of 70** and an **OES Score of 30**. They have provided only **one valid OES data point**, which is categorized as a **`GENERIC_ANSWER`**.
-
-    **Output:** 
-
-    
-    The respondent should **not be excluded** because they **do not meet the minimum valid OES data points requirement for cleaning**, even though their **OES Score is below the threshold**.
-  </Accordion>
-</AccordionGroup>
+This configuration will exclude a respondent who:
+- Scores < 60 on the ReDem Score
+- Has 2+ generic answers
+- Has 2+ “No Information” responses
+- Or even just 1 flagged AI-generated response (due to its lower tolerance threshold)
