Enhance Coherence Score documentation with detailed scoring criteria
- Expanded the explanation of the Coherence Score to clarify its evaluation of interview consistency.
- Introduced specific score ranges (20, 50, 80, 100) with descriptions of the quality implications for each level.
- Added a section outlining key factors influencing the Coherence Score, improving overall understanding of its assessment criteria.

--- a/knowledge-base/quality-checks/coherence-score.mdx
+++ b/knowledge-base/quality-checks/coherence-score.mdx
@@ -11,8 +11,13 @@ Additionally, the Coherence Score minimizes false positives by avoiding the disq
 
 ## How is the Coherence-Score calculated?
 
-The Coherence Score evaluates the entire interview and assigns a score ranging from 0 to 100. It includes:
+The Coherence Score evaluates the entire interview to assess its internal consistency:
+- Score 20 is assigned to interviews with multiple major contradictions, indicating very low quality and potential signs of fraudulent behavior.
+- Score 50 reflects interviews with several coherence issues, suggesting that participants may have been inattentive at times, leading to noticeable contradictions.
+- Score 80 is given to interviews with only minor inconsistencies, likely caused by brief lapses in attention.
+- Score 100 represents interviews that are fully consistent, logically sound, and free of contradictions.
 
+**What the Coherence Score Includes:**
 - Explanation of the Rating: Provides a summary of the overall quality of the interview.
 - Describes how consistent or contradictory the respondent’s answers are across questions.
 - Highlights key factors that influenced the rating (e.g. logical flow, alignment of answers).
