--- a/knowledge-base/miscellaneous/language-support.mdx
+++ b/knowledge-base/miscellaneous/language-support.mdx
@@ -9,56 +9,62 @@ ReDem® checks are supported in multiple languages to ensure accurate quality as
 
 Below is the list of supported languages along with their corresponding [ISO 639-1](https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes) two-letter codes:
 
-- Albanian - `sq`
-- Amharic - `am`
-- Arabic - `ar`
-- Armenian - `hy`
-- Bengali - `bn`
-- Bosnian - `bs`
-- Bulgarian - `bg`
-- Chinese (Simplified & Traditional) - `zh`
-- Croatian - `hr`
-- Czech - `cs`
-- Dutch - `nl`
-- English - `en`
-- Estonian - `et`
-- Filipino (Tagalog) - `tl`
-- French - `fr`
-- Georgian - `ka`
-- German - `de`
-- Greek - `el`
-- Gujarati - `gu`
-- Hebrew - `he`
-- Hindi - `hi`
-- Hungarian - `hu`
-- Icelandic - `is`
-- Indonesian - `id`
-- Italian - `it`
-- Japanese - `ja`
-- Kannada - `kn`
-- Khmer - `km`
-- Korean - `ko`
-- Lao - `lo`
-- Latvian - `lv`
-- Lithuanian - `lt`
-- Malay - `ms`
-- Marathi - `mr`
-- Nepali - `ne`
-- Polish - `pl`
-- Portuguese - `pt`
-- Romanian - `ro`
-- Russian - `ru`
-- Serbian - `sr`
-- Sinhala - `si`
-- Slovak - `sk`
-- Slovenian - `sl`
-- Somali - `so`
-- Spanish - `es`
-- Swahili - `sw`
-- Tamil - `ta`
-- Telugu - `te`
-- Thai - `th`
-- Turkish - `tr`
-- Ukrainian - `uk`
-- Urdu - `ur`
-- Vietnamese - `vi`
+- Albanian – `sq`  
+- Amharic – `am`  
+- Arabic – `ar`  
+- Armenian – `hy`  
+- Bengali – `bn`  
+- Bosnian – `bs`  
+- Bulgarian – `bg`  
+- Burmese – `my`  
+- Catalan – `ca`  
+- Chinese – `zh`  
+- Croatian – `hr`  
+- Czech – `cs`  
+- Danish – `da`  
+- Dutch – `nl`  
+- Estonian – `et`  
+- Finnish – `fi`  
+- French – `fr`  
+- Georgian – `ka`  
+- German – `de`  
+- Greek – `el`  
+- Gujarati – `gu`  
+- Hindi – `hi`  
+- Hungarian – `hu`  
+- Icelandic – `is`  
+- Indonesian – `id`  
+- Italian – `it`  
+- Japanese – `ja`  
+- Kannada – `kn`  
+- Kazakh – `kk`  
+- Korean – `ko`  
+- Latvian – `lv`  
+- Lithuanian – `lt`  
+- Macedonian – `mk`  
+- Malay – `ms`  
+- Malayalam – `ml`  
+- Marathi – `mr`  
+- Mongolian – `mn`  
+- Norwegian – `no`  
+- Persian – `fa`  
+- Polish – `pl`  
+- Portuguese – `pt`  
+- Punjabi – `pa`  
+- Romanian – `ro`  
+- Russian – `ru`  
+- Serbian – `sr`  
+- Slovak – `sk`  
+- Slovenian – `sl`  
+- Somali – `so`  
+- Spanish – `es`  
+- Swahili – `sw`  
+- Swedish – `sv`  
+- Tagalog – `tl`  
+- Tamil – `ta`  
+- Telugu – `te`  
+- Thai – `th`  
+- Turkish – `tr`  
+- Ukrainian – `uk`  
+- Urdu – `ur`  
+- Vietnamese – `vi`
