Update asynchronous and synchronous response documentation to change category status from "exclude" to "activate" for better clarity on data point requirements.

--- a/api-reference/intro/synchronous-response.mdx
+++ b/api-reference/intro/synchronous-response.mdx
@@ -47,11 +47,11 @@ iconType: "regular"
           "score": 40,
           "minDataPoints":2,
           "categories": {
-            "BAD_LANGUAGE": {"exclude": true, "minDataPoints":2},
-            "NONSENSE": {"exclude": true, "minDataPoints":2},
-            "WRONG_TOPIC": {"exclude": true, "minDataPoints":2},
-            "WRONG_LANGUAGE": {"exclude": true, "minDataPoints":2},
-            "AI_GENERATED_ANSWER": {"exclude": true, "minDataPoints":2},
+            "BAD_LANGUAGE": {"activate": true, "minDataPoints":2},
+            "NONSENSE": {"activate": true, "minDataPoints":2},
+            "WRONG_TOPIC": {"activate": true, "minDataPoints":2},
+            "WRONG_LANGUAGE": {"activate": true, "minDataPoints":2},
+            "AI_GENERATED_ANSWER": {"activate": true, "minDataPoints":2},
             // ... other categories ...
           }
         },
