Update survey question text for clarity in structuring survey responses

--- a/api-reference/others/structuring-survey-responses.mdx
+++ b/api-reference/others/structuring-survey-responses.mdx
@@ -36,7 +36,7 @@ Single-select questions (radio buttons, dropdowns, yes/no, Likert scale, NPS, et
 
 // Likert scale question
 {
-    "question": "How much do you enjoy eating street food?",
+    "question": "How much do you enjoy eating street food? - Not at all, A little, Somewhat, Quite a bit, Very much",
     "answer": "Not at all"
 }
 
@@ -59,7 +59,7 @@ Multi-select questions (checkboxes) produce a zero, one or many answer values.
 ```javascript Example interviewData objects for a multi-select question
 // if the respondet selected one option
 {
-  "question": "Which of these dietary preferences or restrictions apply to you? (Select all that apply)",
+  "question": "Which of these dietary preferences or restrictions apply to you? (Select all that apply) - Vegetarian, Vegan, Gluten-free, Lactose-intolerant, Halal",
   "answer": "Vegetarian"
 }
 
